# vtt2minutes

./: .cliff.toml  .env.sample  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  filter_words.txt  pyproject.toml  replacement_rules.txt  vtt2minutes.spec
.claude/: settings.local.json
.claude/commands/: commit.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-update-dependencies.yml  build-binaries.yml  ci.yml  coverage.yml  dependencies.yml  release.yml
prompt_templates/: default.txt  english_default.txt
scripts/: build-binary.sh  check-similarity.sh  release.sh  setup-claude-plugins.sh  setup-hooks.sh
src/vtt2minutes/: __init__.py  __main__.py  batch.py  bedrock.py  cli.py  default_replacement_rules.txt  intermediate.py  parser.py  preprocessor.py  processor.py  summarizer.py
tests/: __init__.py  sample.md  sample.vtt  test_batch.py  test_bedrock.py  test_cli.py  test_intermediate.py  test_main.py  test_parser.py  test_preprocessor.py  test_processor.py  test_prompt_template.py  test_replacement.py
